Fix results waiting time, fix movie cards alignment

--- a/src/components/MovieDisplayer.css
+++ b/src/components/MovieDisplayer.css
@@ -92,7 +92,7 @@
 
 .cards-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 0px;
